-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0
-
None
-
Linux Mint 16
-
8abe8e01e15124c58eb435b0b6f12532a627447a
http://vimdoc.sourceforge.net/htmldoc/visual.html#v_%24
I use this as follows:
Enter block selection mode with ctrl+V
Hit 3j
Select to end of line(s) with $
Hit A to block append
... add text ...
Hit Esc
I'm happy to take a look at fixing this and submitting a patch as well. Please point me to where approximately the code should go.
And thanks much - FakeVim is the best vim emulator I've used by a decent bit. I am loving using QtCreator as my editor!